Added icon. Added status bar info. Thread safe methods now intelligently run if the calling object invoke cannot be completed and check if the current object is disposed.

--- a/TerrariaServerCSGUI/MainForm.resx
+++ b/TerrariaServerCSGUI/MainForm.resx
@@ -145,4 +145,28 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>51</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAMIOAADCDgAAAAAAAAAA
+        AAAAAAAAAAAACwAAAM4AAAD/AAAA/wAAAF8AAAAKAAAAjAAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAzgAA
+        AAsAAAAAAAAAAAAAAAsAAADP7O/y//////89QEXdAAAAzAAAAOddYWf/////////////////2t3i/wAA
+        AM4AAAALAAAAAAAAAAALAAAAAAAAPjAzONT/9dX////3/9Ta4v/NwKv/bmFN/xYeKf+Lhn7////////4
+        1/8AAADOAAAACAAAAAAAAAAHAAAAegAAAI9lWUTk/96i/////////////////86yhP9nXlD/u6uQ////
+        ////4a3/AAAA6gAAAIAAAAAMAAAAemhpa+1pa23///////////////r//////////////+L////r////
+        /////dH/no93/2ptc/8AAADgAAAAFgAAAP///////////+Xp7//////////x////6v//////////////
+        5v////H/y6+D/wAACf/a3uTzAAAAmgAAAA8AAAD///////////8AAAD/oqau////////+dn////x////
+        ///////////e/7KbdfIAAADNAAAApgAAAAkAAAAAAAAA////////////AAAE/7e8w//////////////y
+        v////+b//////73AxvYAAAClAAAACgAAAAgAAAAAAAAAAAAAAPb////+////////////////////////
+        3f9oVTj6AAAA9gAAAPYAAACqAAAAEwAAAAAAAAAAAAAAAAAAAAAAAABDFxcZ4P//////////////////
+        8f9xXkH/AAAAkgAAADIAAAAyAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwAAAEksLTDd//za/3Vo
+        Vf/nyJj/VUUu/wAAAHYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHAAAAzf7j
+        uP8iGQ7/zbiX/3ZpVf8AAAB3AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACwAA
+        ANL/////R0VC//jw4/+Tjof/AAAAegAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAgAAACR6Ont71BSVcrJy8/mh4iM1AAAAFMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAABAAAAJoAAAA9AAAAhAAAAFcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAIAAAAAwAAAAcAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAgAEAAIABAADAAQAAAAAAAAAAAAAAAAAAAAEAAAABAAAADwAAAB8AAAD/AACA/wAAgP8AAID/
+        AADB/wAAwf8AAA==
+</value>
+  </data>
 </root>
