--- a/TerrariaServerCSGUI/Properties/Resources.resx
+++ b/TerrariaServerCSGUI/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Bunny" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bunny.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="BunnyIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\bunnyicon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Bunny_Animated" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bunny-Animated.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
